--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -15,22 +15,24 @@
     limitations under the License.
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-	<title>Media Converter</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Media Converter</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="http://vjs.zencdn.net/5.0/video-js.min.css" rel="stylesheet"/>
+    <script src="http://vjs.zencdn.net/5.0/video.min.js"></script>
 </h:head>
 <h:body>
-	<div id="container">
-		<div id="content">
-			<ui:insert name="content">
-                    [Template content will be inserted here]
-         </ui:insert>
-		</div>
-	</div>
+    <div id="container">
+        <div id="content">
+            <ui:insert name="content">
+                [Template content will be inserted here]
+            </ui:insert>
+        </div>
+    </div>
 
 </h:body>
 </html>
