--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -22,6 +22,8 @@
 <h:head>
     <title>Media Converter</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="http://vjs.zencdn.net/5.0/video-js.min.css" rel="stylesheet" />
+<script src="http://vjs.zencdn.net/5.0/video.min.js"></script>
 </h:head>
 <h:body>
     <div id="container">
